[gd_scene load_steps=6 format=3 uid="uid://dek63gbyfg4ei"]

[ext_resource type="Script" uid="uid://clm87qo21c7lo" path="res://scripts/menu.gd" id="1_jmdev"]
[ext_resource type="Texture2D" uid="uid://b6vk82jruug7b" path="res://ressources/background/bg2.png" id="1_o0tnf"]
[ext_resource type="Texture2D" uid="uid://l6w45g7s23c7" path="res://ressources/menu_plante.png" id="1_xdvgc"]
[ext_resource type="Texture2D" uid="uid://dd8id13ahln15" path="res://ressources/title_univH.png" id="2_upctu"]
[ext_resource type="PackedScene" uid="uid://c1kassqq1adyl" path="res://scenes/Chargement.tscn" id="4_o0tnf"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jmdev")

[node name="fond" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o0tnf")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.67058825, 0.9019608)

[node name="plante" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24700001
anchor_top = 0.179
anchor_right = 0.74200004
anchor_bottom = 1.217
offset_left = -239.544
offset_top = -0.9920044
offset_right = -239.78406
offset_bottom = -1.173645
texture = ExtResource("1_xdvgc")

[node name="jouer" type="Button" parent="plante"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.358
anchor_top = 0.17400001
anchor_right = 0.537
anchor_bottom = 0.284
offset_left = -0.060012817
offset_top = -0.0049819946
offset_right = -0.08999634
offset_bottom = -0.28497314
text = "Jouer"

[node name="propos" type="Button" parent="plante"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.402
anchor_bottom = 0.605
offset_top = -3.2211914
offset_right = -0.13999939
offset_bottom = -0.16345215
text = "A propos"

[node name="options" type="Button" parent="plante"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.64000005
anchor_top = 0.268
anchor_right = 0.84000003
anchor_bottom = 0.377
offset_left = 0.19998169
offset_top = -0.21456909
offset_right = 0.19998169
offset_bottom = 0.1778717
text = "Options"

[node name="quitter" type="Button" parent="plante"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.58100003
anchor_top = 0.503
anchor_right = 0.76100004
anchor_bottom = 0.61200005
offset_left = -0.17001343
offset_top = -0.23852539
offset_right = 0.22998047
offset_bottom = 0.15390015
text = "Quitter"

[node name="titre" type="TextureRect" parent="."]
z_index = 1
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23600002
anchor_right = 0.76400006
anchor_bottom = 0.23500001
offset_left = 265.128
offset_top = 7.000001
offset_right = 264.87195
offset_bottom = 6.719986
grow_horizontal = 2
rotation = 0.2617994
texture = ExtResource("2_upctu")

[node name="ColorRect" type="ColorRect" parent="titre"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.40784314)

[node name="Chargement" parent="." instance=ExtResource("4_o0tnf")]
position = Vector2(1061.25, 568.25)
scale = Vector2(0.42882562, 0.42882562)
frame_progress = 0.8605602

[node name="Timer" type="Timer" parent="."]

[node name="chargement_block" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.53400004
anchor_top = 0.81200004
anchor_right = 0.86500007
anchor_bottom = 0.95800006
offset_left = -0.16802979
offset_top = -0.17602539
offset_right = 1.5198975
offset_bottom = 0.21594238
color = Color(0.19607843, 0.19607843, 0.19607843, 0.4)

[node name="texte" type="RichTextLabel" parent="chargement_block"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[connection signal="pressed" from="plante/jouer" to="." method="_on_jouer_pressed"]
[connection signal="pressed" from="plante/propos" to="." method="_on_propos_pressed"]
[connection signal="pressed" from="plante/quitter" to="." method="_on_quitter_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
